--- a/source/_posts/“12”.md
+++ b/source/_posts/“12”.md
@@ -1,6 +1,18 @@
 ---
-title: “12”
+title: “好记性不如烂笔头”
 date: 2021-04-24 17:00:37
-tags:
-categories:
+tags: 
+categories: 配置
 ---
+#好记性不如烂笔头
+&emsp;好久没有更新自己的博客网站了，前几天心血来潮，想写点东西。居然发现不会写了·····果然，无论是知识还是舞蹈，一天不练就会缩回去。没办法从头开始学呗！
+&emsp;打开谷歌开始学习，写了一点感悟打算发出去时，又发现GitHub上面居然有8个漏洞，这我能忍？立即开启修复模式，查了几篇文章，改了一些代码。终于搞定了。为了下次长记性，我决定写一下。  
+&emsp;*1*``` npm outdate (查看更新)```找到过时的依赖。  
+&emsp;*2*``` npm install jquery@3.0.0（安装jquery 的3.0.0版本） ```
+如此即可  
+&emsp;其次记录一下提交源文件步骤  
+&emsp;#1 ``` git add .```  
+&emsp;#2 ``` git commit -m "填修改的信息"```  
+&emsp;#3 ``` git push origin Hexo（因为我的远端分支叫做Hexo,把源文件更新到远端去）```（注意要是出现问题，如不能git push ,可以尝试```git pull```下来，重复上面操作）  
+&emsp;``` git clone git@github.com:yourname/yourname.github.io.git #从远端仓库克隆下来```  
+&emsp;还有就是master分支放的是hexo，deploy的静态资源。Hexo则存放的是自己写的源代码。具体配置参见_config.yml文件_  
