--- a/source/_posts/好记性不如烂笔头.md
+++ b/source/_posts/好记性不如烂笔头.md
@@ -16,5 +16,6 @@ categories: 配置
 &emsp;#3 ``` git push origin Hexo（因为我的远端分支叫做Hexo,把源文件更新到远端去）```（注意要是出现问题，如不能git push ,可以尝试```git pull```下来，重复上面操作）  
 &emsp;``` git clone git@github.com:yourname/yourname.github.io.git #从远端仓库克隆下来```  
 &emsp;还有就是master分支放的是hexo，deploy的静态资源。Hexo则存放的是自己写的源代码。具体配置参见_config.yml文件_。相当于本地上存了2种数据，即源代码和静态网址数据，前者push到Hexo分支上，后者hexo deploy 到master上。如果上传数据失败，记得``` 先git pull origin master或者Hexo。使得数据一致，再push或者deploy ```
+&emsp;还有出现``` git push origin Hexo 显示 Everything up-date(说明没有进行git commit -m "msg")``
 
 
